# contract/v1/openapi.json
@@ -13,7 +13,7 @@
 		}
 	},
 	"paths": {
-		"/api/v1/check-in": {
+		"/api/accounts/v1/check-in": {
 			"post": {
 				"operationId": "checkIn",
 				"requestBody": {
@@ -167,7 +167,7 @@
 				}
 			}
 		},
-		"/api/v1/auth/device": {
+		"/api/accounts/v1/auth/device": {
 			"post": {
 				"operationId": "authDevice",
 				"requestBody": {
@@ -396,7 +396,7 @@
 				}
 			}
 		},
-		"/api/v1/auth/purchase": {
+		"/api/accounts/v1/auth/purchase": {
 			"post": {
 				"operationId": "authPurchase",
 				"requestBody": {
@@ -616,7 +616,7 @@
 				}
 			}
 		},
-		"/api/v1/auth/claim": {
+		"/api/accounts/v1/auth/claim": {
 			"post": {
 				"operationId": "authClaim",
 				"requestBody": {
@@ -831,7 +831,7 @@
 				}
 			}
 		},
-		"/api/v1/account": {
+		"/api/accounts/v1/account": {
 			"get": {
 				"operationId": "account",
 				"security": [
@@ -1029,7 +1029,7 @@
 				}
 			}
 		},
-		"/api/v1/account/signout": {
+		"/api/accounts/v1/account/signout": {
 			"post": {
 				"operationId": "signOut",
 				"security": [
